--- a/frontend/src/styles/pages/IndexPage.css
+++ b/frontend/src/styles/pages/IndexPage.css
@@ -139,7 +139,7 @@ section{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(../public/images/background.jpg);
+    background: url(/public/images/background.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -162,7 +162,7 @@ section{
 .nosotros{
     padding-top:50px;
     padding-bottom: 50px;
-    background-image: url(../public/images/about-bg.png);
+    background-image: url(/public/images/about-bg.png);
     background-repeat: repeat-y;
     background-position: center top;
 }
