Tarea Modulo4 Unidad4

--- a/backend/views/admin/layout.hbs
+++ b/backend/views/admin/layout.hbs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sitio Coffee</title>
-    <link rel="stylesheet" href="/public/stylesheets/normalize.css" />
+    <link rel="stylesheet" href="/stylesheets/normalize.css" />
     <link
       rel="stylesheet"
       href="http://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700&amp;display=swap"
@@ -15,8 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <!-- font awesome link  -->
-    <link rel="stylesheet" href="/public/stylesheets/style.css" />
-    <link rel="stylesheet" href="/public/stylesheets/admin.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/admin.css" />
     <!-- Estilo CSS Link -->
 
   </head>
