--- a/backend/views/admin/login.hbs
+++ b/backend/views/admin/login.hbs
@@ -1,1 +1,30 @@
-<h1>Proximamente armado de login</h1>
+<section class="contacto" id="contacto">
+
+  <h1 class="heading">Bienvenido!</h1>
+
+  <div class="row">
+
+    <form action="/admin/login" method="post">
+      <h3>Login</h3>
+
+      <div class="inputBox">
+        <span class="fas fa-user"></span>
+        <input type="text" placeholder="usuario" name="usuario" />
+      </div>
+
+      <div class="inputBox">
+        <span class="fas fa-envelope-open-text"></span>
+        <input type="password" placeholder="contraseña" name="password" />
+      </div>
+
+      <input type="submit" value="ingresar" class="btn" />
+
+      {{#if error}}
+        <p>Usuario y/o contraseña incorrectos.</p>
+      {{/if}}
+
+    </form>
+
+  </div>
+
+</section>
