--- a/backend/views/admin/layout.hbs
+++ b/backend/views/admin/layout.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/normalize.css" />
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700&amp;display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700&display=swap"
     />
     <!-- configuracion exploradores -->
     <link
