--- a/frontend/src/styles/layout/Index.css
+++ b/frontend/src/styles/layout/Index.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700&amp;display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700&display=swap");
 
 :root {
   --main-color: #2f2721;
